# gitlab-monitor

./: DEVELOPMENT.md  Makefile  README.md  RELEASING.md  entry.py  glmon.spec  pyproject.toml  release.sh  test_version.py
.github/workflows/: release.yml  update-homebrew.yml
demo-seed/: .envrc.demo  .gitlab-ci.yml  README.md  pyproject.toml  seed-mrs.sh
demo-seed/src/: calculator.py
demo-seed/tests/: test_calculator.py
gitlab_monitor/: __init__.py  api.py  config.py  constants.py  formatting.py  tui.py
gitlab_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
